2014-09-22  Kostas Nakos  <knakos@gmail.com>

* android/* : Bugfix no sound when machine is NTSC, small bugfixes and
  workarounds for OSL sound. Prepare for release.


2014-09-19  Kostas Nakos  <knakos@gmail.com>
* configure.ac: Switch to android-9 environment for OpenSL ES support.

* android/*: Add OpenSL ES native sound support for post-2.3 devices. Gained
  accurate sound playback. Added bindings for capstoggle & atari keys.


2014-09-16  Kostas Nakos  <knakos@gmail.com>
* atari.c: Skip ROM file search as some android builds go in infinite loop
  due to buggy platform implementation.

* configure.ac: Updated to newer android toolchain.

* android/*: Support for built-in Planetary Defense 2012 (courtesy and thanks
  to Tom Hudson), miscellaneous fixes, update to newer android toolchain.


** 3.1.0 released on 2014-04-12

2014-04-12  Petr Stehlik <pstehlik@sophics.cz>
* DOC/ChangeLog, DOC/NEWS: updated for new release

* README.1ST, atari800.spec, DOC/README, atari.h, atari800.man, configure.ac,
  util/export: version++


2014-04-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cfg.c, mxpokeysnd.[ch], pokeysnd.[ch], sound.c, ui.c, configure.ac: Moved the
  SYNCHRONIZED_SOUND code made more generic and moved out of mzpokeysnd.c to
  pokeysnd.c. Now synchronized sound is supported by both pokey sound engines.

* colours_pal.c: Minor formatting & constness fixes.


2014-03-03  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.c, atari_basic.c, atari_curses.c, atari_falcon.c, atari_ps2.c,
  atari_x11.c, amiga/amiga.c, dos/atari_vga.c, sdl/main.c,
  win32/atari_win32.c, win32/main.cpp, atari_wince.c Ensure that Sound_Exit()
  is called after config file is saved-on-exit, by moving the call to
  Sound_Exit() out of PLATFORM_Exit() and into Atari800_Exit(). Reason: When
  SOUND_THIN_API is enabled, autosaving after Sound_Exit would cause the
  config file's SOUND_ENABLED entry to always be written as 0.


2014-02-27  Tomasz Krasuski  <kr0tki@poczta.onet.pl>